HSB colors on sliders, matching with the bg

--- a/CoolorsApp/style.css
+++ b/CoolorsApp/style.css
@@ -50,11 +50,11 @@ svg {
   padding: 1rem;
   width: 80%;
   border-top-right-radius: 1rem;
-  pointer-events: none;
+  /* pointer-events: none; */
   border-top-left-radius: 1rem;
-  opacity: 0;
+  /* opacity: 0; */
   /* We are adding an adjustment class */
-  transform: translateY(100px);
+  /* transform: translateY(100px); */
   transition: all 0.5s ease-in-out;
 }
 
@@ -121,4 +121,14 @@ svg {
   background: none;
   cursor: pointer;
   margin: 2rem 0rem;
+}
+
+/* HSB styling */
+input[type='range'] {
+  -webkit-appearance: none;
+  margin: 1rem 0rem;
+  width: 100%;
+  position: relative;
+  border-radius: 1rem;
+  cursor: pointer;
 }
