--- a/ProtoPhotoApp/style.css
+++ b/ProtoPhotoApp/style.css
@@ -5,46 +5,119 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 header {
+  margin: 0;
   display: flex;
   flex-direction: column;
-  min-height: 30vh;
+  min-height: 25vh;
   justify-content: center;
   align-items: center;
+  background: #ccdbdc;
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='100%25' gradientTransform='rotate(178,768,361)'%3E%3Cstop offset='0' stop-color='%23ffffff'/%3E%3Cstop offset='1' stop-color='%235b939a'/%3E%3C/linearGradient%3E%3Cpattern patternUnits='userSpaceOnUse' id='b' width='300' height='250' x='0' y='0' viewBox='0 0 1080 900'%3E%3Cg fill-opacity='0.03'%3E%3Cpolygon fill='%23444' points='90 150 0 300 180 300'/%3E%3Cpolygon points='90 150 180 0 0 0'/%3E%3Cpolygon fill='%23AAA' points='270 150 360 0 180 0'/%3E%3Cpolygon fill='%23DDD' points='450 150 360 300 540 300'/%3E%3Cpolygon fill='%23999' points='450 150 540 0 360 0'/%3E%3Cpolygon points='630 150 540 300 720 300'/%3E%3Cpolygon fill='%23DDD' points='630 150 720 0 540 0'/%3E%3Cpolygon fill='%23444' points='810 150 720 300 900 300'/%3E%3Cpolygon fill='%23FFF' points='810 150 900 0 720 0'/%3E%3Cpolygon fill='%23DDD' points='990 150 900 300 1080 300'/%3E%3Cpolygon fill='%23444' points='990 150 1080 0 900 0'/%3E%3Cpolygon fill='%23DDD' points='90 450 0 600 180 600'/%3E%3Cpolygon points='90 450 180 300 0 300'/%3E%3Cpolygon fill='%23666' points='270 450 180 600 360 600'/%3E%3Cpolygon fill='%23AAA' points='270 450 360 300 180 300'/%3E%3Cpolygon fill='%23DDD' points='450 450 360 600 540 600'/%3E%3Cpolygon fill='%23999' points='450 450 540 300 360 300'/%3E%3Cpolygon fill='%23999' points='630 450 540 600 720 600'/%3E%3Cpolygon fill='%23FFF' points='630 450 720 300 540 300'/%3E%3Cpolygon points='810 450 720 600 900 600'/%3E%3Cpolygon fill='%23DDD' points='810 450 900 300 720 300'/%3E%3Cpolygon fill='%23AAA' points='990 450 900 600 1080 600'/%3E%3Cpolygon fill='%23444' points='990 450 1080 300 900 300'/%3E%3Cpolygon fill='%23222' points='90 750 0 900 180 900'/%3E%3Cpolygon points='270 750 180 900 360 900'/%3E%3Cpolygon fill='%23DDD' points='270 750 360 600 180 600'/%3E%3Cpolygon points='450 750 540 600 360 600'/%3E%3Cpolygon points='630 750 540 900 720 900'/%3E%3Cpolygon fill='%23444' points='630 750 720 600 540 600'/%3E%3Cpolygon fill='%23AAA' points='810 750 720 900 900 900'/%3E%3Cpolygon fill='%23666' points='810 750 900 600 720 600'/%3E%3Cpolygon fill='%23999' points='990 750 900 900 1080 900'/%3E%3Cpolygon fill='%23999' points='180 0 90 150 270 150'/%3E%3Cpolygon fill='%23444' points='360 0 270 150 450 150'/%3E%3Cpolygon fill='%23FFF' points='540 0 450 150 630 150'/%3E%3Cpolygon points='900 0 810 150 990 150'/%3E%3Cpolygon fill='%23222' points='0 300 -90 450 90 450'/%3E%3Cpolygon fill='%23FFF' points='0 300 90 150 -90 150'/%3E%3Cpolygon fill='%23FFF' points='180 300 90 450 270 450'/%3E%3Cpolygon fill='%23666' points='180 300 270 150 90 150'/%3E%3Cpolygon fill='%23222' points='360 300 270 450 450 450'/%3E%3Cpolygon fill='%23FFF' points='360 300 450 150 270 150'/%3E%3Cpolygon fill='%23444' points='540 300 450 450 630 450'/%3E%3Cpolygon fill='%23222' points='540 300 630 150 450 150'/%3E%3Cpolygon fill='%23AAA' points='720 300 630 450 810 450'/%3E%3Cpolygon fill='%23666' points='720 300 810 150 630 150'/%3E%3Cpolygon fill='%23FFF' points='900 300 810 450 990 450'/%3E%3Cpolygon fill='%23999' points='900 300 990 150 810 150'/%3E%3Cpolygon points='0 600 -90 750 90 750'/%3E%3Cpolygon fill='%23666' points='0 600 90 450 -90 450'/%3E%3Cpolygon fill='%23AAA' points='180 600 90 750 270 750'/%3E%3Cpolygon fill='%23444' points='180 600 270 450 90 450'/%3E%3Cpolygon fill='%23444' points='360 600 270 750 450 750'/%3E%3Cpolygon fill='%23999' points='360 600 450 450 270 450'/%3E%3Cpolygon fill='%23666' points='540 600 630 450 450 450'/%3E%3Cpolygon fill='%23222' points='720 600 630 750 810 750'/%3E%3Cpolygon fill='%23FFF' points='900 600 810 750 990 750'/%3E%3Cpolygon fill='%23222' points='900 600 990 450 810 450'/%3E%3Cpolygon fill='%23DDD' points='0 900 90 750 -90 750'/%3E%3Cpolygon fill='%23444' points='180 900 270 750 90 750'/%3E%3Cpolygon fill='%23FFF' points='360 900 450 750 270 750'/%3E%3Cpolygon fill='%23AAA' points='540 900 630 750 450 750'/%3E%3Cpolygon fill='%23FFF' points='720 900 810 750 630 750'/%3E%3Cpolygon fill='%23222' points='900 900 990 750 810 750'/%3E%3Cpolygon fill='%23222' points='1080 300 990 450 1170 450'/%3E%3Cpolygon fill='%23FFF' points='1080 300 1170 150 990 150'/%3E%3Cpolygon points='1080 600 990 750 1170 750'/%3E%3Cpolygon fill='%23666' points='1080 600 1170 450 990 450'/%3E%3Cpolygon fill='%23DDD' points='1080 900 1170 750 990 750'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect x='0' y='0' fill='url(%23b)' width='100%25' height='100%25'/%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 header h2 {
-  padding: 2rem;
+  padding: 0rem 0rem 0rem 0rem;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.5rem;
+  color: #003249;
+  letter-spacing: 0.1rem;
+}
+
+.logo-container {
+  display: flex;
+
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+}
+
+.info {
+  display: flex;
+  justify-content: right;
+  align-items: right;
+  text-align: right;
+  margin-left: auto;
+  margin-right: 3rem;
+  margin-top: 0;
+}
+.image-svg {
+  width: 35px;
+}
+
+.logo {
+  /* padding-top: 1rem; */
+  width: 220px;
+}
+
+p {
+  font-weight: 500;
+}
+
+.link {
+  color: #007ea7;
+  font-weight: 600;
+}
+
+a {
+  text-decoration: none;
 }
 
 #logo {
   text-decoration: none;
-  color: black;
+  color: #001f2e;
+}
+
+.both-search {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .search-form {
-  padding: 2rem;
+  padding: 1rem;
   display: flex;
+  justify-content: center;
 }
 
 .search-form input {
-  font-size: 2rem;
-  padding: 0.5rem;
+  font-size: 1rem;
+  padding: 0.5rem 8rem 0.5rem 0.5rem;
   width: 100%;
   border: none;
-  border: 1px solid rgb(0, 15, 34);
+  box-shadow: 4px 4px 8px 3px rgba(0, 0, 0, 0.1);
+  padding-left: 1rem;
+  background: rgba(255, 255, 255, 0.897);
+  border-radius: 5px 0px 0px 5px;
+  outline: none;
+}
+
+.search-form input::placeholder {
+  font-size: 1rem;
+  color: rgb(131, 161, 163);
+}
+
+.search-icon {
+  width: 25px;
+  color: white;
 }
 
 .search-form button {
   border: none;
-  padding: 0.5rem;
+  padding: 0.6rem 1rem;
   font-size: 1rem;
-  background: rgb(0, 15, 34);
-  color: white;
+  background: #003249;
+  color: rgba(255, 255, 255, 0.842);
   cursor: pointer;
+  border-radius: 0px 5px 5px 0px;
+  box-shadow: 4px 4px 8px 3px rgba(0, 0, 0, 0.1);
+  font-weight: 500;
 }
 
 .gallery-info {
@@ -75,6 +148,12 @@ header h2 {
   object-fit: cover;
 }
 
+.gallery-img video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .nav-button {
   min-height: 30vh;
   display: flex;
@@ -83,10 +162,11 @@ header h2 {
 }
 
 .more {
-  padding: 1rem 3rem;
-  background: rgb(0, 15, 34);
+  padding: 1.5rem 9rem;
+  background: #001f2e;
   color: white;
   border: none;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   cursor: pointer;
+  border-radius: 10px;
 }
