--- a/RangeenApp/style.css
+++ b/RangeenApp/style.css
@@ -19,6 +19,22 @@ svg {
   pointer-events: none;
 }
 
+header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.logo {
+  font-family: 'Aladin', cursive;
+  font-size: 3rem;
+}
+
+.info-image {
+  width: 50px;
+  margin-left: 5rem;
+}
+
 .colors {
   min-height: 80vh;
   display: flex;
@@ -70,15 +86,18 @@ svg {
   position: absolute;
   top: 0;
   right: 0;
-  border-top-left-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-  border: none;
-  background: rgb(73, 73, 73);
-  color: white;
-  cursor: pointer;
-  font-weight: bold;
 
-  padding: 0.5rem;
+  border: none;
+  background: none;
+  color: rgb(31, 33, 63);
+  cursor: pointer;
+  font-weight: 900;
+
+  padding: 0.5rem 1rem;
+}
+
+.sliders span {
+  color: rgb(31, 33, 63);
 }
 
 .controls {
@@ -94,9 +113,11 @@ svg {
 }
 
 .panel button {
-  font-size: 1.2rem;
+  font-size: 1rem;
   margin: 1rem;
-  padding: 1rem 2rem;
+  margin-bottom: 0.5rem;
+
+  padding: 1rem 2.5rem;
   background: rgb(31, 33, 63);
   border: none;
   color: white;
@@ -105,7 +126,7 @@ svg {
 }
 
 .panel p {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .library-panel,
